[Uploads] Fix an overflow issue with the source inputs

--- a/app/javascript/src/styles/specific/uploads.scss
+++ b/app/javascript/src/styles/specific/uploads.scss
@@ -104,6 +104,7 @@ div#c-uploads {
 
       input {
         margin-bottom: 2px;
+        width: 100%;
       }
     }
 
